[gd_scene load_steps=49 format=3 uid="uid://rif721tfwcm7"]

[ext_resource type="Script" uid="uid://lyicqu5gf04w" path="res://Scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cwib3r5qdmgru" path="res://Assets/The Guy.png" id="3_hqtel"]
[ext_resource type="Texture2D" uid="uid://ufmnktllbmrs" path="res://Assets/Basic Dust.png" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://duoimoheppbpj" path="res://Scripts/trail.gd" id="3_sweqy"]
[ext_resource type="Texture2D" uid="uid://cux4ghjx68qi3" path="res://Assets/Progress Bar BG.png" id="5_8erm5"]
[ext_resource type="Texture2D" uid="uid://b1m8curdxmht4" path="res://Assets/UI.png" id="5_fkybt"]
[ext_resource type="Texture2D" uid="uid://buc3ncprtfpws" path="res://Assets/Token.png" id="6_x3wgy"]
[ext_resource type="FontFile" uid="uid://cwcju0qnh4dxd" path="res://Assets/Pixeled.ttf" id="7_3smsa"]
[ext_resource type="Texture2D" uid="uid://v050dckuyers" path="res://Assets/Menu Button-1.png.png" id="9_gymyn"]
[ext_resource type="Texture2D" uid="uid://c5v7t8gpdrjg5" path="res://Assets/Menu Button-3.png.png" id="10_pu2lt"]
[ext_resource type="Texture2D" uid="uid://x3sjjyolvmw" path="res://Assets/Menu Button-2.png.png" id="11_ukyrk"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vgqql"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("3_hqtel")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("3_hqtel")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("3_hqtel")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_hqtel")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_hqtel")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("3_hqtel")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("3_hqtel")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}],
"loop": true,
"name": &"Cling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"Dive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": true,
"name": &"Flip",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": true,
"name": &"Roll",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}],
"loop": true,
"name": &"Super",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"Walk",
"speed": 12.0
}]

[sub_resource type="Curve" id="Curve_hqtel"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_sweqy"]
colors = PackedColorArray(1, 1, 1, 0.376471, 1, 1, 1, 0.521569)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(12, 27)

[sub_resource type="Curve" id="Curve_onrkg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.365019, 0.620029), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_hqtel"]
colors = PackedColorArray(1, 1, 1, 0.470588, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sweqy"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_vgqql")
sprite_frames = SubResource("SpriteFrames_2hs0m")
animation = &"Roll"

[node name="Trail" type="Line2D" parent="."]
top_level = true
z_index = -1
points = PackedVector2Array(0, 0)
width = 1.5
width_curve = SubResource("Curve_hqtel")
gradient = SubResource("Gradient_sweqy")
script = ExtResource("3_sweqy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Coyote Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Buffer Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Buffer Timer 2" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(0, 27)

[node name="Particles" type="Node2D" parent="."]

[node name="Jump Particles" type="CPUParticles2D" parent="Particles"]
emitting = false
texture = ExtResource("3_i3pqv")
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 4
emission_points = PackedVector2Array(-5, -1, 5, -1, 0, -1)
emission_colors = PackedColorArray()
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
scale_amount_curve = SubResource("Curve_onrkg")
color_ramp = SubResource("Gradient_hqtel")

[node name="Wall Particles" type="CPUParticles2D" parent="Particles"]
position = Vector2(0, -7)
emitting = false
texture = ExtResource("3_i3pqv")
lifetime = 0.8
randomness = 1.0
emission_shape = 4
emission_points = PackedVector2Array(0, -6, 0, -12, 0, -18)
emission_colors = PackedColorArray()
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
scale_amount_curve = SubResource("Curve_onrkg")
color_ramp = SubResource("Gradient_hqtel")

[node name="Wall Jump Particles" type="CPUParticles2D" parent="Particles"]
emitting = false
texture = ExtResource("3_i3pqv")
lifetime = 0.25
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 4
emission_points = PackedVector2Array(0, -6, 0, -12, 0, -18)
emission_colors = PackedColorArray()
gravity = Vector2(0, 0)
initial_velocity_min = 35.0
initial_velocity_max = 35.0
scale_amount_curve = SubResource("Curve_onrkg")
color_ramp = SubResource("Gradient_hqtel")

[node name="Roll Particles" type="CPUParticles2D" parent="Particles"]
position = Vector2(0, 15)
emitting = false
amount = 16
texture = ExtResource("3_i3pqv")
lifetime = 0.4
emission_shape = 4
emission_points = PackedVector2Array(-5, -1, 5, -1, 0, -1)
emission_colors = PackedColorArray()
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
scale_amount_curve = SubResource("Curve_onrkg")
color_ramp = SubResource("Gradient_hqtel")

[node name="Sideflip Particles" type="CPUParticles2D" parent="Particles"]
position = Vector2(0, 15)
emitting = false
amount = 16
texture = ExtResource("3_i3pqv")
lifetime = 0.4
one_shot = true
emission_shape = 4
emission_points = PackedVector2Array(-5, -1, 5, -1, 0, -1)
emission_colors = PackedColorArray()
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
scale_amount_curve = SubResource("Curve_onrkg")
color_ramp = SubResource("Gradient_hqtel")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Super Meter" type="ProgressBar" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hqtel")
theme_override_styles/fill = SubResource("StyleBoxFlat_sweqy")
max_value = 2000.0
show_percentage = false

[node name="ProgressBarBg" type="Sprite2D" parent="UI"]
position = Vector2(384, 28.5)
texture = ExtResource("5_8erm5")

[node name="Ui" type="Sprite2D" parent="UI"]
position = Vector2(57, 398)
texture = ExtResource("5_fkybt")

[node name="Sprite2D2" type="Sprite2D" parent="UI"]
position = Vector2(41, 398)
texture = ExtResource("6_x3wgy")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Label" type="Label" parent="UI"]
offset_left = 47.0
offset_top = 382.0
offset_right = 87.0
offset_bottom = 410.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_3smsa")
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("9_gymyn")
texture_pressed = ExtResource("10_pu2lt")
texture_hover = ExtResource("11_ukyrk")

[connection signal="timeout" from="Coyote Timer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Buffer Timer" to="." method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="Buffer Timer 2" to="." method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="Buffer Timer 2" to="." method="_on_buffer_timer_2_timeout"]
[connection signal="pressed" from="UI/TextureButton" to="." method="_on_texture_button_pressed"]
